--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
+    "emoji-picker-react": "^4.4.9",
     "framer-motion": "^10.12.16",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
