--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "miragejs": "^0.1.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.12.0",
