--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,9 +16,6 @@
     "dayjs": "^1.11.8",
     "emoji-mart": "^5.5.2",
     "framer-motion": "^10.12.16",
-    "jwt-decode": "^3.1.2",
-    "jwt-encode": "^1.0.1",
-    "miragejs": "^0.1.47",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
@@ -25,6 +23,7 @@
     "react-icons": "^4.9.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^5.3.4",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
     "react-top-loading-bar": "^2.3.1",
